Fixed alignment for desktop header

--- a/views/_media.scss
+++ b/views/_media.scss
@@ -5,11 +5,17 @@
   }
 
   header {
-    height: 80vh;
+    height: 90vh;
     width: 90vw;
     max-width: 1200;
-    margin: 5em auto;
+    margin: auto;
     margin-bottom: none;
+  }
+
+  .container {
+    position: absolute;
+    top: 50%;
+    margin-top: -230px;
   }
 
   .bio {
